# ec-slimloader-odp

./: README.md  deny.toml  link-imxrt.x
.github/workflows/: check.yml
bootloader-tool/: .gitignore  Cargo.toml  README.md  config.toml  deny.toml
bootloader-tool/.cargo/: config.toml
bootloader-tool/artifacts/: .gitignore  README.md  mbi-application.yaml  mbi-bootloader.yaml
bootloader-tool/src/: config.rs  lib.rs  main.rs
bootloader-tool/src/commands/: download.rs  generate.rs  mod.rs  run.rs  sign.rs
bootloader-tool/src/processors/: certificates.rs  mod.rs  objcopy.rs  otp.rs  probe.rs
bootloader-tool/src/processors/mbi/: cert_block.rs  mod.rs
bootloader-tool/src/util/: mod.rs  progress.rs
bootloader-tool/tests/: behavior_matches_nxpimage.rs
examples/rt685s/: .gitignore  Cargo.toml  ci.sh
examples/rt685s/.cargo/: config.toml
examples/rt685s/application/: Cargo.toml  README.md  build.rs  memory.x
examples/rt685s/application/src/: main.rs
examples/rt685s/bootloader/: Cargo.toml  build.rs  memory.x
examples/rt685s/bootloader/src/: main.rs
examples/rt685s/bsp/: Cargo.toml
examples/rt685s/bsp/src/: ext-flash.toml  lib.rs
libs/: .gitignore  Cargo.toml  ci.sh
libs/ec-slimloader/: Cargo.toml
libs/ec-slimloader-imxrt/: Cargo.toml
libs/ec-slimloader-imxrt/src/: bootload.rs  fcb.rs  lib.rs  mbi.rs  verification.rs
libs/ec-slimloader-state/: Cargo.toml
libs/ec-slimloader-state/fuzz/: Cargo.toml
libs/ec-slimloader-state/fuzz/fuzz_targets/: interrupted.rs  random-flash.rs
libs/ec-slimloader-state/src/: flash.rs  lib.rs  state.rs
libs/ec-slimloader-state/src/flash/: mock.rs
libs/ec-slimloader/src/: lib.rs
libs/imxrt-rom/: Cargo.toml  build.rs  registers.json
libs/imxrt-rom/src/: api.rs  lib.rs  otp.rs  registers.rs  skboot.rs
libs/imxrt-rom/src/registers/: device.rs
src/imxrt/: mod.rs
