[package]
name = "ec-slimloader"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
defmt = [
    "dep:defmt",
    "defmt-or-log/defmt",
    "ec-slimloader-state/defmt",
]
log = [
    "dep:log",
    "defmt-or-log/log"
]

default = []

[dependencies]
ec-slimloader-state = { path = "../ec-slimloader-state", default-features = false }

defmt = { workspace = true, optional = true }
defmt-or-log = { workspace = true }
embedded-storage-async = { workspace = true }
log = { workspace = true, optional = true }
