[package]
name = "example-application"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
defmt = [
    "dep:defmt",
    "dep:defmt-rtt",
    "defmt-or-log/defmt",
    "panic-probe/defmt",
    "embassy-imxrt/defmt",
    "embassy-time/defmt",
    "embassy-time/defmt-timestamp-uptime",
    "ec-slimloader-state/defmt",
]
log = ["defmt-or-log/log"]

[dependencies]
example-bsp = { path = "../bsp", features = ["application"] }

ec-slimloader-state = { path = "../../../libs/ec-slimloader-state" }
imxrt-rom = { path = "../../../libs/imxrt-rom" }

cortex-m = { version = "0.7.7", features = [
    "inline-asm",
    "critical-section-single-core",
] }
cortex-m-rt = { version = "0.7.5" }

defmt = { workspace = true, optional = true }
defmt-or-log = { workspace = true }
defmt-rtt = { workspace = true, optional = true }
panic-probe = { version = "*" }

embassy-imxrt = { workspace = true, features = [
    "rt",
    "time-driver-os-timer",
    "time",
    "mimxrt685s",
    "unstable-pac",
] }

embassy-executor = { workspace = true, features = [
    "arch-cortex-m",
    "executor-thread",
] }

embassy-time = { version = "0.5" }
embassy-futures = "0.1.2"
embassy-embedded-hal = "0.5.0"

embassy-sync = { workspace = true }
partition-manager = { workspace = true, features = ["esa", "macros"] }

embedded-storage = "0.3.1"
embedded-storage-async = "0.4.1"
