[package]
name = "example-bsp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
partition-manager = { workspace = true, features = ["esa", "macros"] }
embassy-sync = { workspace = true }

[features]
application = []
bootloader = []
